# loggate

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  test.py  test.yaml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  test.yml
logate/: __init__.py  filters.py  helper.py  logger.py
logate/loki/: emitters.py
loggate/: __init__.py  filters.py  formatters.py  helper.py  logger.py
loggate/http/: __init__.py  aio_api_call.py  simple_api_call.py
loggate/loki/: __init__.py  confirmation_queue.py  emitters.py  formatters.py  handlers.py
mantra_logger/: __init__.py  filters.py  formatters.py  logger.py
mantra_logger/loki/: __init__.py  emitters.py  formatters.py  handlers.py
mantra_logger/std/: formatters.py
tests/: conftest.py  test.py  test.yaml  test_async_loki.py  test_loki.py
tests/manual/: test.py  test.yaml
