[tool.poetry]
name = "loggate"
version = "1.3.0"
license = "MIT"
readme = "README.md"
description = "The complex logging system."
authors = ["Martin Korbel <mkorbel@alps.cz>"]
homepage = "https://github.com/calcite/loggate"
repository = "https://github.com/calcite/loggate"
documentation = "https://github.com/calcite/loggate"

keywords = ["log", "logging", "logger", "loki"]
classifiers = [
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = { version = "*", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
PyYAML = "^5.4.1 || ^6.0"
pytest-asyncio = [{version = "^0.19.0", python = "^3.7"},
                  {version = "^0.16.0", python = "^3.6"}]

[tool.poetry.extras]
asyncio = ["aiohttp"]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
