[tool.poetry]
name = "loggate"
version = "1.12.0"
license = "MIT"
readme = "README.md"
description = "The complex logging system."
authors = ["Martin Korbel <mkorbel@alps.cz>"]
homepage = "https://github.com/calcite/loggate"
repository = "https://github.com/calcite/loggate"
documentation = "https://github.com/calcite/loggate"

keywords = ["log", "logging", "logger", "loki"]
classifiers = [
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.8"
frozenlist = {version = "^1.5.0", optional = true}
aiohttp = { version = "^3.10.0", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
PyYAML = "^6.0.0"
pytest-asyncio = "^0.21.0"

[tool.poetry.extras]
asyncio = ["frozenlist","aiohttp"]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
